Add database schema for flashcard application and remove connection strings from appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "flashcardContext": "server=localhost;username=postgres;database=flashcardContext-11a88200-6cea-4138-b593-1fd0596ee151"
-  }
+  "AllowedHosts": "*"
 }
