Update environment variables for PostgreSQL configuration and refactor connection string handling

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-GOOGLE_CLIENT_ID="<YOUR_GOOGLE_CLIENT_ID>"
-GOOGLE_CLIENT_SECRET="<YOUR_GOOGLE_CLIENT_SECRET>"
-DB_CONNECTION_STRING="Host=<HOST_NAME>;Port=<PORT_DB>;Database=<DB_NAME>;Username=<USERNAME>;Password=<PASSWORD>"
+GOOGLE_CLIENT_ID=<YOUR_GOOGLE_CLIENT_ID>
+GOOGLE_CLIENT_SECRET=<YOUR_GOOGLE_CLIENT_SECRET>
+
+POSTGRES_HOST=<YOUR_POSTGRES_HOST>
+POSTGRES_DB_NAME=<YOUR_POSTGRES_DB_NAME>
+POSTGRES_USER=<YOUR_POSTGRES_USER>
+POSTGRES_PASSWORD=<YOUR_POSTGRES_PASSWORD>
