--- a/flashcard.csproj
+++ b/flashcard.csproj
@@ -14,5 +14,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.1" />
+    <PackageReference Include="SimpleDotEnv" Version="1.0.0" />
   </ItemGroup>
 </Project>
