--- a/SimpleDotEnv/SimpleDotEnv.csproj
+++ b/SimpleDotEnv/SimpleDotEnv.csproj
@@ -14,6 +14,7 @@
         <AssemblyCompany>XYZ Company</AssemblyCompany>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
         <FileVersion>1.0.0.0</FileVersion>
+        <TargetFramework>net8.0</TargetFramework>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
