--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 GOOGLE_CLIENT_ID=<YOUR_GOOGLE_CLIENT_ID>
 GOOGLE_CLIENT_SECRET=<YOUR_GOOGLE_CLIENT_SECRET>
 
+POSTGRES_USER_ID=<YOUR_POSTGRES_USER_ID>
 POSTGRES_HOST=<YOUR_POSTGRES_HOST>
 POSTGRES_DB_NAME=<YOUR_POSTGRES_DB_NAME>
 POSTGRES_USER=<YOUR_POSTGRES_USER>
 POSTGRES_PASSWORD=<YOUR_POSTGRES_PASSWORD>
+POSTGRES_SERVER=<YOUR_POSTGRES_SERVER>
+POSTGRES_PORT=<YOUR_POSTGRES_PORT>
